--- a/index.html
+++ b/index.html
@@ -1314,17 +1314,17 @@
                                     <tr>
                                         <td class="key-open-label">Daily:</td>
                                         <td id="btc-daily-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><input type="text" id="btc-daily-note" class="key-open-note" placeholder="Note..."></td>
+                                        <td class="key-open-note-cell"><input type="text" id="btc-daily-note" class="key-open-note" placeholder=""></td>
                                     </tr>
                                     <tr>
                                         <td class="key-open-label">Weekly:</td>
                                         <td id="btc-weekly-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><input type="text" id="btc-weekly-note" class="key-open-note" placeholder="Note..."></td>
+                                        <td class="key-open-note-cell"><input type="text" id="btc-weekly-note" class="key-open-note" placeholder=""></td>
                                     </tr>
                                     <tr>
                                         <td class="key-open-label">Monthly:</td>
                                         <td id="btc-monthly-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><input type="text" id="btc-monthly-note" class="key-open-note" placeholder="Note..."></td>
+                                        <td class="key-open-note-cell"><input type="text" id="btc-monthly-note" class="key-open-note" placeholder=""></td>
                                     </tr>
                                 </table>
                             </div>
@@ -1334,17 +1334,17 @@
                                     <tr>
                                         <td class="key-open-label">Daily:</td>
                                         <td id="eth-daily-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><input type="text" id="eth-daily-note" class="key-open-note" placeholder="Note..."></td>
+                                        <td class="key-open-note-cell"><input type="text" id="eth-daily-note" class="key-open-note" placeholder=""></td>
                                     </tr>
                                     <tr>
                                         <td class="key-open-label">Weekly:</td>
                                         <td id="eth-weekly-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><input type="text" id="eth-weekly-note" class="key-open-note" placeholder="Note..."></td>
+                                        <td class="key-open-note-cell"><input type="text" id="eth-weekly-note" class="key-open-note" placeholder=""></td>
                                     </tr>
                                     <tr>
                                         <td class="key-open-label">Monthly:</td>
                                         <td id="eth-monthly-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><input type="text" id="eth-monthly-note" class="key-open-note" placeholder="Note..."></td>
+                                        <td class="key-open-note-cell"><input type="text" id="eth-monthly-note" class="key-open-note" placeholder=""></td>
                                     </tr>
                                 </table>
                             </div>
