--- a/index.html
+++ b/index.html
@@ -1319,17 +1319,17 @@
                                     <tr>
                                         <td class="key-open-label">Daily:</td>
                                         <td id="btc-daily-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><textarea id="btc-daily-note" class="key-open-note" placeholder="Note..." rows="1"></textarea></td>
+                                        <td class="key-open-note-cell"><textarea id="btc-daily-note" class="key-open-note" placeholder="" rows="1"></textarea></td>
                                     </tr>
                                     <tr>
                                         <td class="key-open-label">Weekly:</td>
                                         <td id="btc-weekly-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><textarea id="btc-weekly-note" class="key-open-note" placeholder="Note..." rows="1"></textarea></td>
+                                        <td class="key-open-note-cell"><textarea id="btc-weekly-note" class="key-open-note" placeholder="" rows="1"></textarea></td>
                                     </tr>
                                     <tr>
                                         <td class="key-open-label">Monthly:</td>
                                         <td id="btc-monthly-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><textarea id="btc-monthly-note" class="key-open-note" placeholder="Note..." rows="1"></textarea></td>
+                                        <td class="key-open-note-cell"><textarea id="btc-monthly-note" class="key-open-note" placeholder="" rows="1"></textarea></td>
                                     </tr>
                                 </table>
                             </div>
@@ -1339,17 +1339,17 @@
                                     <tr>
                                         <td class="key-open-label">Daily:</td>
                                         <td id="eth-daily-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><textarea id="eth-daily-note" class="key-open-note" placeholder="Note..." rows="1"></textarea></td>
+                                        <td class="key-open-note-cell"><textarea id="eth-daily-note" class="key-open-note" placeholder="" rows="1"></textarea></td>
                                     </tr>
                                     <tr>
                                         <td class="key-open-label">Weekly:</td>
                                         <td id="eth-weekly-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><textarea id="eth-weekly-note" class="key-open-note" placeholder="Note..." rows="1"></textarea></td>
+                                        <td class="key-open-note-cell"><textarea id="eth-weekly-note" class="key-open-note" placeholder="" rows="1"></textarea></td>
                                     </tr>
                                     <tr>
                                         <td class="key-open-label">Monthly:</td>
                                         <td id="eth-monthly-open" class="key-open-price">--</td>
-                                        <td class="key-open-note-cell"><textarea id="eth-monthly-note" class="key-open-note" placeholder="Note..." rows="1"></textarea></td>
+                                        <td class="key-open-note-cell"><textarea id="eth-monthly-note" class="key-open-note" placeholder="" rows="1"></textarea></td>
                                     </tr>
                                 </table>
                             </div>
