--- a/index.html
+++ b/index.html
@@ -2511,7 +2511,7 @@
                     <tr>
                         <td>${priceStart} - ${priceEnd}</td>
                         <td class="sr-center-price">${centerPrice}</td>
-                        <td class="sr-score-cell" style="background-image: linear-gradient(to right, ${barColor} ${scoreWidth}%, transparent ${scoreWidth}%);"><span class="sr-score-value">${score}</span></td>
+                        <td class="sr-score-cell" style="background-image: linear-gradient(to right, ${barColor} ${scoreWidth}%, transparent ${scoreWidth}%);"><span class="sr-score-value">${Math.round(score)}</span></td>
                         <td class="sr-pivots-cell">${level['Pivot Count']}</td>
                     </tr>`;
             };
