--- a/index.html
+++ b/index.html
@@ -1425,6 +1425,10 @@
                 </div>
                 <div class="collapsible-content">
                     <div class="collapsible-content-inner">
+                        
+                        <!-- START: REORDERED SECTION -->
+                        <textarea id="primary-setups-notes" class="setups-notes-area" placeholder="Notes for Primary Setups..."></textarea>
+
                         <h3>Primary</h3>
                         <div class="table-wrapper">
                             <table id="primary-setups-table" class="setups-table">
@@ -1454,7 +1458,6 @@
                                 </tbody>
                             </table>
                         </div>
-                        <textarea id="primary-setups-notes" class="setups-notes-area" placeholder="Notes for Primary Setups..."></textarea>
 
                         <h3 style="margin-top: 25px;">Secondary</h3>
                         <div class="table-wrapper">
@@ -1486,6 +1489,7 @@
                            </table>
                        </div>
                        <textarea id="secondary-setups-notes" class="setups-notes-area" placeholder="Notes for Secondary Setups..."></textarea>
+                        <!-- END: REORDERED SECTION -->
 
                         <div class="setups-controls">
                             <button id="save-setups-1-btn" class="master-only">Save Primary Setups</button>
@@ -3331,3 +3335,4 @@
 
 </body>
 </html>
+```
