--- a/index.html
+++ b/index.html
@@ -1842,7 +1842,7 @@
         // The ones you posted are public and compromised.
         const CONFIG = {
             FIREBASE: {
-                apiKey: "YOUR_NEW_API_KEY", // <-- REPLACE THIS
+                apiKey: "AIzaSyCQ4vHqGiv_yRkA0zZaaOU24gxhqBkxnv4", // <-- REPLACE THIS
                 authDomain: "journal-a003f.firebaseapp.com",
                 databaseURL: "https://journal-a003f-default-rtdb.asia-southeast1.firebasedatabase.app",
                 projectId: "journal-a003f",
