--- a/index.html
+++ b/index.html
@@ -1844,11 +1844,11 @@
             FIREBASE: {
                 apiKey: "AIzaSyCQ4vHqGiv_yRkA0zZaaOU24gxhqBkxnv4", // <-- REPLACE THIS
                 authDomain: "journal-a003f.firebaseapp.com",
-                databaseURL: "https://journal-a003f-default-rtdb.asia-southeast1.firebasedatabase.app",
-                projectId: "journal-a003f",
-                storageBucket: "journal-a003f.appspot.com", // Corrected domain
-                messagingSenderId: "1038636626553",
-                appId: "1:1038636626553:web:7a91c321e39c146bdc9aa8"
+        databaseURL: "https://journal-a003f-default-rtdb.asia-southeast1.firebasedatabase.app",
+        projectId: "journal-a003f",
+        storageBucket: "journal-a003f.firebasestorage.app", // <-- The CORRECT domain
+        messagingSenderId: "1038636626553",
+        appId: "1:1038636626553:web:7a91c321e39c146bdc9aa8"
             },
             DB_PATHS: {
                 TRADES: 'trades',
