--- a/index.html
+++ b/index.html
@@ -2738,14 +2738,13 @@
             }, 750);
         };
 
+        // FIX: Removed debounce since save is now on blur.
         const savePrimarySetupsNotes = () => {
-            clearTimeout(STATE.setups1NotesTimer);
-            STATE.setups1NotesTimer = setTimeout(() => { saveSetupsTable(DOM.setupsTable1, dbRefs.setups1, DOM.setupsSaveStatus1, 'primary-setups-notes'); }, 750);
+            saveSetupsTable(DOM.setupsTable1, dbRefs.setups1, DOM.setupsSaveStatus1, 'primary-setups-notes');
         };
         
         const saveSecondarySetupsNotes = () => {
-            clearTimeout(STATE.setups2NotesTimer);
-            STATE.setups2NotesTimer = setTimeout(() => { saveSetupsTable(DOM.setupsTable2, dbRefs.setups2, DOM.setupsSaveStatus2, 'secondary-setups-notes'); }, 750);
+            saveSetupsTable(DOM.setupsTable2, dbRefs.setups2, DOM.setupsSaveStatus2, 'secondary-setups-notes');
         };
 
         function handleFileUpload(files) {
@@ -2976,8 +2975,13 @@
             }, true);
 
             DOM.trackerScratchpadEl.addEventListener('input', () => { autoResizeTextarea(DOM.trackerScratchpadEl); saveTrackerScratchpad(); });
-            DOM.primarySetupsNotes.addEventListener('input', () => { autoResizeTextarea(DOM.primarySetupsNotes); savePrimarySetupsNotes(); });
-            DOM.secondarySetupsNotes.addEventListener('input', () => { autoResizeTextarea(DOM.secondarySetupsNotes); saveSecondarySetupsNotes(); });
+            
+            // FIX: Changed setups notes to save on blur instead of input to prevent scrolling while typing.
+            DOM.primarySetupsNotes.addEventListener('input', () => autoResizeTextarea(DOM.primarySetupsNotes));
+            DOM.primarySetupsNotes.addEventListener('blur', savePrimarySetupsNotes);
+            DOM.secondarySetupsNotes.addEventListener('input', () => autoResizeTextarea(DOM.secondarySetupsNotes));
+            DOM.secondarySetupsNotes.addEventListener('blur', saveSecondarySetupsNotes);
+
             DOM.libraryImageUpload.addEventListener('change', (e) => handleGenericLibraryUpload(e.target.files, 'image_library', DOM.libraryUploadProgress, dbRefs.imageLibrary));
             DOM.setupsImageUpload.addEventListener('change', (e) => handleGenericLibraryUpload(e.target.files, 'setups_images', DOM.setupsUploadProgress, dbRefs.setupsImages));
             DOM.tradeImageUploader.addEventListener('change', (e) => handleAttachmentImageUpload(e.target.files));
