--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-how come when i press enter in the trading setups input box , if i can see below sections it expands and takes user down to the save priamry secondary buttons , but if can only see the input box taking up whole screen view pressing enter it just works normally creates new line ,, something broken ,, : <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
