--- a/index.html
+++ b/index.html
@@ -1483,7 +1483,7 @@
                             <table id="primary-setups-table" class="setups-table">
                                 <thead>
                                     <tr>
-                                        <th rowspan="2">TF</th>
+                                        <th rowspan="2">ETH</th>
                                         <th colspan="5">0-Candle</th>
                                         <th colspan="5">4-Candle</th>
                                         <th colspan="5">0-Candle Bounce</th>
@@ -1513,7 +1513,7 @@
                              <table id="secondary-setups-table" class="setups-table">
                                 <thead>
                                     <tr>
-                                        <th rowspan="2">TF</th>
+                                        <th rowspan="2">BTC</th>
                                         <th colspan="5">0-Candle</th>
                                         <th colspan="5">4-Candle</th>
                                         <th colspan="5">0-Candle Bounce</th>
